[tool.poetry]
name = "Openrouter.ai Proxy"
version = "0.1.0"
description = "Proxy to openrouter.ai API"
authors = ["BertKiv <wojciech.kiwerski@idealapps.cloud>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^0.19.2"
pyautogen = {extras = ["autobuild"], version = "^0.2.14"}
pytest = "^8.0.1"
requests = "^2.31.0"
asyncio = "^3.4.3"
pproxy = "^2.7.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
