[tool.poetry]
name = "Openrouter.ai Proxy"
version = "0.1.0"
description = "Proxy to openrouter.ai API"
authors = ["BertKiv <wojciech.kiwerski@idealapps.cloud>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^0.19.2"
requests = "^2.31.0"
asyncio = "^3.4.3"

# Exclude the problematic package
nvidia-nvjitlink-cu12 = { version = "12.3.101", allow-prereleases = false, optional = true }
streamlit = "^1.31.1"

[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
