[tool.poetry]
name = "Openrouter.ai Proxy"
version = "0.1.0"
description = "Proxy to openrouter.ai API"
authors = ["BertKiv <wojciech.kiwerski@idealapps.cloud>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.31.0"
asyncio = "^3.4.3"

# Exclude the problematic package
nvidia-nvjitlink-cu12 = { version = "12.3.101", allow-prereleases = false, optional = true }
fastapi = "^0.110.0"
uvicorn = "^0.27.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
